Fixes - scroll bar reusable styling - header menu alignment fix

--- a/wp-content/themes/aviation/scss/custom.scss
+++ b/wp-content/themes/aviation/scss/custom.scss
@@ -175,3 +175,24 @@ body {
         }
     }
 }
+
+::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    -moz-box-shadow:  inset 0 0 6px rgba(0,0,0,0.5);
+    box-shadow:  inset 0 0 6px rgba(0,0,0,0.5);
+    -ms-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    border-radius: 8px;
+    background-color: #F5F5F5;
+  }
+   ::-webkit-scrollbar {
+    width: 10px; 
+    background-color: #F5F5F5;
+  }
+   ::-webkit-scrollbar-thumb{
+    border-radius: 8px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.5);
+    -moz-box-shadow:  inset 0 0 6px rgba(0,0,0,0.5);
+    box-shadow:  inset 0 0 6px rgba(0,0,0,0.5);
+    -ms-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background-color: #001658;
+  }
